# gov-ml

./: .env.example  .gitignore  .prettierignore  README.md  eslint.config.mjs  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  presentation.md  pyproject.toml  setup.md  tsconfig.base.json  tsconfig.json  turbo.json  vercel.ts
.github/workflows/: chain-anchor.yml  pr.yml  setup-validator.yml
apps/dashboard/: .env.example  middleware.ts  next.config.mjs  package.json  playwright.config.ts  proxy.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/(app)/: layout.tsx
apps/dashboard/tests/: chat-stream.test.ts
apps/landing/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/landing/app/: globals.css  layout.tsx  page.tsx
docs/presentation/: aegis-presentation.md
docs/superpowers/plans/: 2026-04-28-aegis-phase-0-scaffolding.md  2026-04-28-aegis-phase-1a-credit-pipeline.md  2026-04-28-aegis-phase-2-control-plane.md  2026-04-28-aegis-phase-3-detection-services.md  2026-04-28-aegis-phase-4-dashboard.md  2026-04-28-aegis-phase-5-control-plane-wiring.md  2026-04-28-aegis-phase-6-causal-attribution.md  2026-04-28-aegis-phase-7-pareto-action-selector.md  2026-04-28-aegis-phase-8-governance-assistant.md
docs/superpowers/specs/: 2026-04-28-aegis-design.md
infra/tinybird/: README.md
infra/tinybird/datasources/: predictions.datasource  signals.datasource  subgroup_counters.datasource
infra/tinybird/endpoints/: drift_window.endpoint  fairness_window.endpoint  fleet_kpi.endpoint  kpi_sparkline.endpoint  model_kpi.endpoint
infra/tinybird/pipes/: drift_window.pipe  fairness_window.pipe  fleet_kpi.pipe  kpi_sparkline.pipe  model_kpi.pipe  prediction_volume.pipe
ml-pipelines/_shared/: pyproject.toml
ml-pipelines/_shared/src/aegis_pipelines/: __init__.py  cards.py  data.py  eval.py  seed.py
ml-pipelines/_shared/tests/: test_cards.py  test_data.py  test_eval.py  test_seed.py
ml-pipelines/credit/: 01_download.py  02_preprocess.py  03_train.py  04_evaluate.py  05_generate_artifacts.py  README.md  causal_dag.json  config.py  credit_preprocess.py
ml-pipelines/credit/tests/: test_credit_preprocess.py  test_credit_smoke.py  test_preprocess.py  test_smoke.py
ml-pipelines/readmission/: 01_download.py  02_preprocess.py  03_train.py  04_evaluate.py  05_generate_artifacts.py  README.md  causal_dag.json  config.py  readmission_preprocess.py
ml-pipelines/readmission/tests/: test_readmission_preprocess.py  test_readmission_smoke.py
ml-pipelines/toxicity/: 01_download.py  02_preprocess.py  03_train.py  04_evaluate.py  05_generate_artifacts.py  README.md  causal_dag.json  config.py  toxicity_preprocess.py
scripts/: start-all.sh
services/action-selector/: pyproject.toml
services/action-selector/src/aegis_action_selector/: __init__.py  actions.py  app.py  blr.py  cb_knapsack.py  pareto.py  persistence.py  tchebycheff.py
services/action-selector/src/aegis_action_selector/routers/: health.py  select.py
services/action-selector/tests/: test_actions.py  test_blr.py  test_cb_knapsack.py  test_health.py  test_pareto.py  test_persistence_redis.py  test_regret_bounded.py  test_select_endpoint.py  test_tchebycheff.py
services/assistant/: README.md  pyproject.toml
services/assistant/src/aegis_assistant/: __init__.py  app.py  chat_loop.py  config.py  groq_client.py  system_prompt.py
services/assistant/src/aegis_assistant/routers/: chat.py  health.py
services/assistant/src/aegis_assistant/tools/: __init__.py  approvals.py  decision.py  dispatcher.py  drift.py  fleet.py  metrics.py  pareto.py  schemas.py
services/assistant/tests/: conftest.py  test_chat_loop.py  test_chat_stream_endpoint.py  test_config_reload.py  test_groq_client.py  test_health.py  test_system_prompt.py  test_tool_approvals.py  test_tool_decision.py  test_tool_drift.py  test_tool_fleet.py  test_tool_metrics.py  test_tool_pareto.py  test_tools_dispatcher.py  test_tools_schemas.py
services/causal-attrib/: pyproject.toml
services/causal-attrib/src/aegis_causal_attrib/: __init__.py  app.py  cause_mapping.py  config.py  dag_loader.py  dbshap.py  dowhy_attrib.py  fcm.py
services/causal-attrib/src/aegis_causal_attrib/routers/: attrib.py  health.py
services/causal-attrib/tests/: conftest.py  test_attrib_endpoint.py  test_cause_mapping.py  test_dag_loader.py  test_dbshap.py  test_dowhy_attrib.py  test_fcm.py  test_health.py  test_shapley_efficiency.py
services/control-plane/: alembic.ini  pyproject.toml
services/control-plane/src/aegis_control_plane/: __init__.py  app.py  audit.py  audit_writer.py  compliance_data.py  config.py  dataset_data.py  db.py  orm.py  seed.py  seed_cli.py
services/control-plane/src/aegis_control_plane/alembic/: env.py  script.py.mako
services/control-plane/src/aegis_control_plane/alembic/versions/: 0001_models_and_versions.py  0002_governance_decisions.py  0003_audit_log.py  0004_approvals.py  0005_policies.py  0006_action_history.py  0007_datasets.py
services/control-plane/src/aegis_control_plane/routers/: activity.py  audit.py  compliance.py  cron.py  csv_export.py  datasets.py  decisions.py  demo.py  fleet.py  health.py  kpi.py  models.py  policies.py  reachability.py  signals.py  stream.py
services/control-plane/tests/: conftest.py  test_activity_router.py  test_audit_writer.py  test_compliance_router.py  test_csv_export.py  test_datasets_router.py  test_demo_endpoint.py  test_fleet_router.py  test_health.py  test_kpi_router.py  test_reachability.py  test_routing_prefix.py  test_seed.py  test_stream.py
services/detect-tabular/: pyproject.toml
services/detect-tabular/src/aegis_detect_tabular/: __init__.py  app.py  detectors.py
services/detect-tabular/tests/: test_app.py  test_detectors.py
services/detect-text/: pyproject.toml
services/detect-text/src/aegis_detect_text/: __init__.py  app.py  embeddings.py  mmd.py
services/detect-text/tests/: test_app.py  test_mmd.py
tests/scenarios/: _harness.py  apple_card_2019.py  test_scenario_apple_card.py
(+60 files in other folders)
