[project]
name = "aegis"
version = "0.1.0"
description = "Autonomous self-healing governance for ML systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "syedwam7q", email = "engg@airtribe.live" }]

[tool.uv.workspace]
members = [
  "packages/shared-py",
  "services/*",
]

[tool.uv]
package = false
dev-dependencies = [
  "ruff>=0.8.0",
  "pyright>=1.1.380",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "hypothesis>=6.115.0",
]
