[project]
name = "aegis"
version = "0.1.0"
description = "Autonomous self-healing governance for ML systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "syedwam7q", email = "engg@airtribe.live" }]

[tool.uv.workspace]
members = [
  "packages/shared-py",
  "services/*",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "ruff>=0.8.0",
  "pyright>=1.1.380",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "hypothesis>=6.115.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["packages/shared-py/src", "services"]
extend-exclude = [".venv", ".uv", "node_modules", "**/__pycache__"]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "ANN",
  "S",
  "RET",
  "SIM",
  "PT",
]
ignore = [
  "S101",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["packages/shared-py/src", "services"]
exclude = ["**/.venv", "**/__pycache__", "**/node_modules"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["packages/shared-py/tests", "services", "tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
