[project]
name = "aegis"
version = "0.1.0"
description = "Autonomous self-healing governance for ML systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "syedwam7q", email = "sdirwamiq@gmail.com" }]

[tool.uv.workspace]
members = [
  "packages/shared-py",
  "ml-pipelines/_shared",
  "services/control-plane",
  "services/detect-tabular",
  "services/detect-text",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "ruff>=0.8.0",
  "pyright>=1.1.380",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "hypothesis>=6.115.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["packages/shared-py/src", "services"]
extend-exclude = [".venv", ".uv", "node_modules", "**/__pycache__"]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "ANN",
  "S",
  "RET",
  "SIM",
  "PT",
]
ignore = [
  "S101",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "S105", "S106", "S107", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = [
  "packages/shared-py/src",
  "ml-pipelines/_shared/src",
  "services/control-plane/src",
  "services/detect-tabular/src",
  "services/detect-text/src",
]
exclude = ["**/.venv", "**/__pycache__", "**/node_modules"]

# ml-pipelines code wraps sklearn / pandas / xgboost which don't ship strict
# type stubs. We keep ruff-level discipline (annotations, no `any`) but relax
# pyright's strict-mode demands here. Production services in `services/` and
# the shared schemas in `packages/shared-py/` remain strict.
[[tool.pyright.executionEnvironments]]
root = "ml-pipelines"
reportMissingTypeStubs = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeArgument = "none"

# detect-tabular's drift detectors lean on pandas + scipy which lack
# strict type stubs. Same override as ml-pipelines.
[[tool.pyright.executionEnvironments]]
root = "services/detect-tabular"
reportMissingTypeStubs = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeArgument = "none"

# detect-text uses sentence-transformers + numpy which also lack strict
# stubs. Same loose-typing rule.
[[tool.pyright.executionEnvironments]]
root = "services/detect-text"
reportMissingTypeStubs = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeArgument = "none"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
  "packages/shared-py/tests",
  "ml-pipelines/_shared/tests",
  "ml-pipelines/credit/tests",
  "ml-pipelines/readmission/tests",
  "ml-pipelines/toxicity/tests",
  "services/control-plane/tests",
  "services/detect-tabular/tests",
  "services/detect-text/tests",
  "tests",
]
addopts = "-ra --strict-markers --strict-config --import-mode=importlib"
asyncio_mode = "auto"
