[project]
name = "aegis-action-selector"
version = "0.1.0"
description = "Pareto-optimal action selection (CB-Knapsacks) for Aegis"
requires-python = ">=3.13"
dependencies = [
  "aegis-shared",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "numpy>=2.1.0",
  "scipy>=1.14.0",
]

[tool.uv.sources]
aegis-shared = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "hypothesis>=6.115.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_action_selector"]

[tool.pyright]
include = ["src", "tests"]
strict = ["src/aegis_action_selector"]
pythonVersion = "3.13"
