[project]
name = "aegis-control-plane"
version = "0.1.0"
description = "MAPE-K orchestrator + sole audit-log writer for Aegis"
requires-python = ">=3.13"
dependencies = [
  "aegis-shared",
  "fastapi>=0.115.0",
  "asyncpg>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "alembic>=1.14.0",
  "sse-starlette>=2.2.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "uvicorn[standard]>=0.32.0",
]

[tool.uv.sources]
aegis-shared = { workspace = true }

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest-asyncio>=0.24.0",
  "asgi-lifespan>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_control_plane"]
