[project]
name = "aegis-detect-tabular"
version = "0.1.0"
description = "Tabular drift + fairness + calibration detection worker for Aegis"
requires-python = ">=3.13"
dependencies = [
  "aegis-shared",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "pandas>=2.2.0",
  "numpy>=2.1.0",
  "fairlearn>=0.11.0",
]

# Evidently and NannyML are pulled in via the [drift] extras in Task 3.
# They cause platform-specific transitive issues (kaleido 0.2.x has no
# macOS-arm64 wheel) so we keep them opt-in and document the install in
# setup.md once Task 3 lands.
[project.optional-dependencies]
drift = [
  "evidently>=0.4.30",
  "nannyml>=0.13.0",
]

[tool.uv.sources]
aegis-shared = { workspace = true }

[dependency-groups]
dev = [
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_detect_tabular"]
